# institute-cabinet

./: docker-compose.yaml  pyproject.toml  requirements.txt
src/cabinet/: manage.py
src/cabinet/cabinet/: asgi.py  settings.py  urls.py  wsgi.py
src/cabinet/usr_cabinet/: admin.py  apps.py  mixins.py  models.py  tests.py  urls.py  views.py
src/cabinet/usr_cabinet/migrations/: 0001_initial.py
src/cabinet/usr_cabinet/templates/usr_cabinet/: anon_cabinet.html  base_cabinet.html  student_cabinet.html  teacher_cabinet.html  user_cabinet.html
