[tool.poetry]
name = "institute-cabinet"
version = "0.1.0"
description = ""
authors = ["Alexander <alexandr.s.trushnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "institute_cabinet"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.4"
Django = "^4.1.2"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
